# scalable-ml-pipeline

./: .gitattributes  LICENSE  README.md  model_card.md  post_request.py  pyproject.toml  render.yaml
.dvc/: config
.github/workflows/: cicd.yaml
data/: census_clean.csv.dvc
model/: .gitignore  encoder.pkl.dvc  label_binarizer.pkl.dvc  slices_education_output.txt  trained_model.pkl.dvc
scalable_ml_pipeline/: api.py  model_trainer.py
scalable_ml_pipeline/data/: data_processor.py
scalable_ml_pipeline/model_helper/: model_helper.py  s3_utils.py
tests/: test_api.py  test_data_process.py  test_model_helper.py  test_model_trainer.py
