[project]
name = "scalable-ml-pipeline"
dynamic = ["version"]
description = "Deploying a ML model to cloud application platform with fastapi"
authors = [
    {name = "Sreeni1204",email = "hvsreenivasa93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1)",
    "uvicorn (>=0.35.0)",
    "scikit-learn (>=1.7.1)",
    "pandas (>=2.3.2)",
    "requests (>=2.32.5)",
    "dvc[google] (>=3.62.0,<4.0.0)",
    "dvc-s3 (>=3.2.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "scalable_ml_pipeline"}]
version = "0.1.0-dev"

[tool.poetry.scripts]
scalable_ml_pipeline_cli = "scalable_ml_pipeline.model_trainer:main"
scalable_ml_pipeline = "scalable_ml_pipeline.api:main"

[tool.poetry.group.dev.dependencies]
pylint = ">=3.3.8"
autopep8 = ">=2.3.2"
pytest-cov = ">=5.0.0"
httpx = "^0.28.1"
flake8 = "^7.3.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
poetry-plugin-bundle = { version = ">=1.7.0,<=2.0.0" }

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefexied"
bump = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
